--- a/pages/school/board/edit.wxml
+++ b/pages/school/board/edit.wxml
@@ -1,5 +1,5 @@
 <!--pages/school/board/edit.wxml-->
-<block wx:if="{{env !== 'release'}}">
+<block wx:if="{{env == 'release'}}">
 
   <cu-custom bgColor="bg-cyan" isCustom="{{true}}">
     <view slot="content">投诉维权信息</view>
