--- a/pages/school/web.wxml
+++ b/pages/school/web.wxml
@@ -16,7 +16,7 @@
       </view>
     </view>
     <view class="text-left padding">
-      <text>学校相关的一些网站，打开新世界的大门。点击链接可以复制到粘贴板，然后可打开浏览器访问。校园网站点必须连接校园网方可访问(不是移动CMCC的那个，是学校的校园网)。</text>
+      <text>学校相关的一些网站，打开新世界的大门。点击链接可以复制到粘贴板，然后可打开浏览器访问。校园网站点必须连接校园网方可访问(不是移动CMCC的那个，是学校的校园网)。\r\n\r\n *本页面内容仅做展示不代表以下站点与本程序有任何关联关系。</text>
     </view>
   </view>
 
