--- a/pages/school/xiaoai.wxml
+++ b/pages/school/xiaoai.wxml
@@ -17,7 +17,7 @@
     </view>
     <view class="text-left padding">
       <text>小米或MIUI手机用户可以通过小爱同学快速查询学校课表，方法如下：\r\n <text
-          class="cuIcon-titles tect-white"></text>本功能由“不改需求的程序猿”同学开发</text>
+          class="cuIcon-titles tect-white"></text>本功能由“不改需求的程序猿”同学个人开发，与任何单位组织无关联关系</text>
     </view>
   </view>
 
