--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -138,10 +138,10 @@
       titleRight="⚡️"
       bindedUrl="../elesys/index?building={{elesysData.building}}&room={{elesysData.room}}"
       bindedShow="{{elesysData.balance.length > 0}}"
-      bindedAccount="{{elesysData.building}}斋{{elesysData.room}}"
+      bindedAccount="{{elesysData.building || ''}}斋{{elesysData.room || ''}}"
       timeText="截止:{{elesysData.time}}"
       contentTextLeft="剩余电量"
-      contentValue="{{elesysData.balance}}"
+      contentValue="{{elesysData.balance || ''}}"
       contentTextRight="度"
       unbindUrl="../elesys/bind"
       unbindShow="{{!hasBindElesys}}"
@@ -156,10 +156,10 @@
       titleRight="🌐"
       bindedUrl="../netsys/index"
       bindedShow="{{netsysData.welcome.length > 0}}"
-      bindedAccount="{{netsysData.netid}}"
+      bindedAccount="{{netsysData.netid || ''}}"
       timeText=""
       contentTextLeft="网费余额"
-      contentValue="{{netsysData.leftMoney}}"
+      contentValue="{{netsysData.leftMoney || ''}}"
       contentTextRight="元"
       unbindUrl="../netsys/bind"
       unbindShow="{{!hasBindNetsys}}"
