--- a/pages/index/component/feecard.wxss
+++ b/pages/index/component/feecard.wxss
@@ -1,6 +1,6 @@
 /* pages/index/component/feecard.wxss */
-@import "../../../colorui/main.wxss";
-@import "../../../colorui/icon.wxss";
+/* @import "../../../colorui/main.wxss";
+@import "../../../colorui/icon.wxss"; */
 
 .df-value {
   color: #ffbf92;
