登录相关优化&头像昵称授权&多余页面删除&通讯录接口获取更新

--- a/colorui/main.wxss
+++ b/colorui/main.wxss
@@ -981,6 +981,18 @@ button.icon.lg {
 	font-size: 2.5em;
 }
 
+.cu-avatar.xxl {
+	width: 168rpx;
+	height: 168rpx;
+	font-size: 3em;
+}
+
+.cu-avatar.xxl {
+	width: 256rpx;
+	height: 256rpx;
+	font-size: 3.5em;
+}
+
 .cu-avatar .avatar-text {
 	font-size: 0.4em;
 }
