--- a/pages/index/login.wxml
+++ b/pages/index/login.wxml
@@ -1,7 +1,11 @@
 <!--login.wxml-->
 <view class="container">
   <view class="remind-box" wx:if="{{remind}}">
-    <image class="remind-img" src="/images/loading.gif"></image>
+    <image class="remind-img" src="https://upload-images.jianshu.io/upload_images/4697920-65fe1e95184a027f.gif?imageMogr2/auto-orient/strip"></image>
+    <view class="text-white text-xl">正在登录，请耐心等候...</view>
+    <view class="cu-progress bg-white round margin-top">
+      <view class="bg-green" style="width:{{remind?(percent+'%'):''}};">{{percent}}%</view>
+    </view>
   </view>
   <block wx:else>
     <image class="title-login" src="/images/title.png"></image>
@@ -15,13 +19,11 @@
         <form class="login-form">
           <view class="input-group {{userid_focus ? 'active' : ''}}">
             <text class="input-label">帐号</text>
-            <input type="number" cursor-spacing="30" id="userid" maxlength="9" placeholder="学号或教务网账号"
-              bindinput="useridInput" bindfocus="inputFocus" bindblur="inputBlur" confirm-type="next" />
+            <input type="number" cursor-spacing="30" id="userid" maxlength="9" placeholder="学号或教务网账号" bindinput="useridInput" bindfocus="inputFocus" bindblur="inputBlur" confirm-type="next" />
           </view>
           <view class="input-group {{passwd_focus ? 'active' : ''}}">
             <text class="input-label">密码</text>
-            <input password="true" cursor-spacing="30" id="passwd" placeholder="教务网密码" bindinput="passwdInput"
-              bindfocus="inputFocus" bindblur="inputBlur" confirm-type="next" />
+            <input password="true" cursor-spacing="30" id="passwd" placeholder="教务网密码" bindinput="passwdInput" bindfocus="inputFocus" bindblur="inputBlur" confirm-type="next" />
           </view>
           <!-- <view class="input-group {{vcode_focus ? 'active' : ''}}">
             <text class="input-label">验证码</text>
@@ -82,18 +84,15 @@
       <view class="padding-xl text-left">
         <view class="cu-form-group margin-top {{userid_focus ? 'active' : ''}}">
           <view class="title">账号</view>
-          <input id="userid" placeholder="教务系统账号" type="number" value="{{userid}}" maxlength="9" confirm-type="next" bindinput="useridInput"
-            bindfocus="inputFocus" bindblur="inputBlur"></input>
+          <input id="userid" placeholder="教务系统账号" type="number" value="{{userid}}" maxlength="9" confirm-type="next" bindinput="useridInput" bindfocus="inputFocus" bindblur="inputBlur"></input>
         </view>
         <view class="cu-form-group margin-top" style="{{idcard_focus ? 'border: 2px solid #7acfa6;' : ''}}">
           <view class="title">身份证号</view>
-          <input id="idcard" placeholder="身份证号码" type="idcard" maxlength="18" bindinput="idcardInput"
-            confirm-type="next" bindfocus="inputFocus" bindblur="inputBlur"></input>
+          <input id="idcard" placeholder="身份证号码" type="idcard" maxlength="18" bindinput="idcardInput" confirm-type="next" bindfocus="inputFocus" bindblur="inputBlur"></input>
         </view>
         <view class="cu-form-group margin-top" style="{{passwd_focus ? 'border: 2px solid #7acfa6;' : ''}}">
           <view class="title">新密码</view>
-          <input id="passwd" placeholder="重置后的新密码" type="text"  maxlength="20" bindinput="passwdInput"
-            confirm-type="next" bindfocus="inputFocus" bindblur="inputBlur"></input>
+          <input id="passwd" placeholder="重置后的新密码" type="text" maxlength="20" bindinput="passwdInput" confirm-type="next" bindfocus="inputFocus" bindblur="inputBlur"></input>
         </view>
       </view>
       <view class="cu-bar bg-white justify-end">
