--- a/pages/school/lost/index.wxml
+++ b/pages/school/lost/index.wxml
@@ -54,9 +54,9 @@
       <navigator url="./detail?id={{item.id}}" class="cu-item shadow" wx:for="{{datalist.data}}" wx:key="lost">
         <view class="cu-list menu-avatar">
           <view class="cu-item">
-            <view class="cu-avatar round lg bg-cyan" style="background-image:url({{item.publisher.avatar}});"></view>
+            <view class="cu-avatar round lg bg-cyan" style="background-image:url({{item.publisher.avatar?item.publisher.avatar:defaultAvatar}});"></view>
             <view class="content flex-sub">
-              <view>{{item.publisher.nickname}}</view>
+              <view>{{item.publisher.nickname || item.uid}}</view>
               <view class="text-gray text-sm flex justify-between">{{item.created_at}}</view>
             </view>
           </view>
