--- a/pages/index/feature.wxml
+++ b/pages/index/feature.wxml
@@ -7,8 +7,8 @@
       </navigator>
       <navigator url="./setting" class="margin-top-sm nickname">{{ edusysUserInfo.nickname ? (edusysUserInfo.nickname + ' | ') : '点击授权昵称头像' }} {{ edusysUserInfo.uid}}</navigator>
     </block>
-    <view class="margin-top-sm nickname" bindtap="goLogin" wx:else>
-      <image src="{{ defaultAvatar }}"></image>您尚未登录
+    <view class="margin-top-sm nickname text-center" bindtap="goLogin" wx:else>
+      <view><image src="{{ defaultAvatar }}"></image></view><view>您尚未登录</view>
     </view>
     <image src="https://upload-images.jianshu.io/upload_images/4697920-0b3859b5e4ef17ec.gif" mode="scaleToFill" class="gif-wave"></image>
   </view>
@@ -19,12 +19,6 @@
         <text class="iconfont icon-{{item.icon}}" style="color:#84BD54;font-size:32px;"></text>
       </view>
       <text>{{item.name}}</text>
-    </view>
-    <view bindtap="showQuanyiModal" class="cu-item" wx:if="{{app.globalData.env == 'release'}}">
-      <view class="text-center">
-        <image src="https://upload-images.jianshu.io/upload_images/4697920-34dcb56de71f8967.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/64" class="replay-board" />
-      </view>
-      <view class="replay-board-text" style="color: #888;">投诉维权</view>
     </view>
   </view>
 
