--- a/utils/iconfont.wxss
+++ b/utils/iconfont.wxss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'iconfont';  /* Project id 2595220 */
-  src: url('//at.alicdn.com/t/font_2595220_yui3t5erzf.woff2?t=1630684337460') format('woff2'),
-       url('//at.alicdn.com/t/font_2595220_yui3t5erzf.woff?t=1630684337460') format('woff'),
-       url('//at.alicdn.com/t/font_2595220_yui3t5erzf.ttf?t=1630684337460') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_2595220_oyj7wnm58c.woff2?t=1662808434766') format('woff2'),
+       url('//at.alicdn.com/t/c/font_2595220_oyj7wnm58c.woff?t=1662808434766') format('woff'),
+       url('//at.alicdn.com/t/c/font_2595220_oyj7wnm58c.ttf?t=1662808434766') format('truetype');
 }
 
 .iconfont {
@@ -115,4 +115,8 @@
 
 .icon-finance:before {
   content: "\e668";
+}
+
+.icon-card:before {
+  content: "\e6c6";
 }
