--- a/pages/school/card/bind.wxml
+++ b/pages/school/card/bind.wxml
@@ -9,7 +9,7 @@
     <view class="padding-xs text-center">
       <image src="{{webImage}}" mode="widthFix"></image>
     </view>
-    <view class="text-center"><text>请输入关联以上系统平台账号密码\r\n默认初始账号为学号，密码身份证号后六位</text></view>
+    <view class="text-center"><text>请输入关联以上系统平台账号密码\r\n默认初始账号为学号</text></view>
   </view>
 
   <view class="margin padding-top">
@@ -19,7 +19,7 @@
     </view>
     <view class="cu-form-group margin-top radius">
       <view class="title">密码</view>
-      <input password="true" value="{{password}}" placeholder="默认密码身份证号后六位(X大写)"></input>
+      <input password="true" value="{{password}}" placeholder=""></input>
     </view>
 
   </view>
