--- a/pages/books/bind.wxml
+++ b/pages/books/bind.wxml
@@ -50,8 +50,7 @@
               <view class="help-q">1、证件号和密码是什么？</view>
               <view class="help-a">
                 <text>证件号：学生默认证件号为学号，教职工默认证件号请咨询图书馆。</text>
-                <text>密码：图书馆OPAC(“我的图书馆”)系统密码,19级默认密码为身份证后六位;18、17、16级默认密码学号
-</text>
+                <text>密码：图书馆OPAC(“我的图书馆”)系统密码,默认密码为身份证后六位;</text>
               </view>
               <view class="help-q">2、忘记密码？</view>
               <view class="help-a">
