--- a/pages/index/feature.wxss
+++ b/pages/index/feature.wxss
@@ -4,10 +4,10 @@
 
 .UCenter-bg {
   background-size: cover;
-  height: 550rpx;
+  height: 500rpx;
   display: flex;
   justify-content: center;
-  padding-top: 40rpx;
+  padding-top: 20rpx;
   overflow: hidden;
   position: relative;
   flex-direction: column;
@@ -53,7 +53,6 @@ map,.mapBox{
   clip-path: circle(50% at center);
   width: 180rpx;
   height: 180rpx;
-  margin-bottom: 20rpx;
   box-shadow: 5rpx 5rpx 15rpx #ccc;
 }
 
@@ -73,4 +72,10 @@ map,.mapBox{
   border-radius: 25rpx;
   color: black;
   font-weight: 350;
+}
+
+.feature-titles {
+  min-height: 40rpx;
+  align-items: flex-start;
+  padding-bottom: 10rpx;
 }
